# MATE_ROV_2021-2022

./: .gitmodules  Dockerfile.basestation  Dockerfile.common  Dockerfile.rov  README.md  thruster_test_script.py
launch/: rov_launch.py
src/_OLD_SOURCE_CODE/rov_cameras/rov_cameras/: rov_cameras.py
src/basestation/bs_flask/: package.xml  setup.py
src/basestation/bs_flask/bs_flask/: bs_flask.py
src/basestation/bs_flask/bs_flask/templates/: index.html.old
src/basestation/bs_flask/static/: orientationViewport.js  script.js  stylesheet.css
src/basestation/bs_flask/templates/: index.html
src/basestation/bs_flask/templates/viewports/: camera_viewport_section.html  (+1 more)
src/basestation/bs_gui/: CMakeLists.txt  package.xml
src/basestation/bs_gui/src/: bs_gui.cpp
src/basestation/bs_launch/: CMakeLists.txt
src/common/heartbeat/heartbeat/: heartbeat.py
src/rov/: run_docker.sh
src/rov/bno055/src/: CSMBNO055.cpp  bno055_node.cpp
src/rov/flight_controller/: CMakeLists.txt
src/rov/flight_controller/src/: Thruster.cpp  flight_controller.cpp
src/rov/image_publisher/: package.xml  setup.cfg  setup.py
src/rov/image_publisher/image_publisher/: image_publisher.py  image_publisher_params.py
src/rov/rov_cameras/: CMakeLists.txt  package.xml
src/rov/rov_cameras/rov_cameras/: rov_cameras.py
src/rov/rov_cameras/src/: rov_cameras.cpp
src/rov/rov_control/: setup.cfg  setup.py
src/rov/rov_control/config/: default.yaml
src/rov/rov_control/rov_control/: rov_control.py
src/rov/rov_control/test/: test_thrusters.py
src/rov/rov_estop/rov_estop/: RovEStop.py
src/rov/rov_interfaces/: CMakeLists.txt
src/rov/rov_interfaces/msg/: ThrusterSetpoints.msg
src/rov/rov_statistics/: setup.cfg
src/rov/rov_statistics/rov_statistics/: rov_statistics.py
(+5 files in other folders)
